--- a/electron-pomodoro-overlay/src/index.html
+++ b/electron-pomodoro-overlay/src/index.html
@@ -98,6 +98,35 @@
       background: #fff;
       color: #222;
     }
+    /* SETTINGS MODAL (initially hidden) */
+    #settings-modal {
+      position: absolute; top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      width: 280px; background: rgba(0,0,0,0.9);
+      border-radius: 12px; padding: 16px;
+      box-sizing: border-box; display: none;
+      -webkit-app-region: no-drag;
+    }
+    #settings-modal h2 { margin-top: 0; color: #fff; }
+    #settings-modal fieldset {
+      border: 1px solid rgba(255,255,255,0.3);
+      margin-bottom: 12px; padding: 8px;
+      color: #fff;
+    }
+    #settings-modal label {
+      display: block; margin: 6px 0;
+      font-size: 0.9em;
+    }
+    #settings-modal input[type="number"] {
+      width: 60px; margin-left: 8px;
+    }
+    #settings-modal .actions {
+      text-align: right;
+    }
+    #settings-modal .actions button {
+      margin-left: 8px; padding: 4px 8px; border-radius: 4px;
+      border: none; cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -111,6 +140,23 @@
       <button id="start">Start</button>
       <button id="pause">Pause</button>
       <button id="reset">Reset</button>
+    </div>
+  </div>
+  <!-- Settings‐Modal -->
+  <div id="settings-modal">
+    <h2>Einstellungen</h2>
+    <fieldset>
+      <legend>Zeitintervalle</legend>
+      <label>Arbeit: <input type="number" id="cfg-work" value="25"> Min.</label>
+      <label>Kurze Pause: <input type="number" id="cfg-short" value="5"> Min.</label>
+      <label>Lange Pause: <input type="number" id="cfg-long" value="15"> Min.</label>
+      <label>Zyklen bis lange Pause:
+        <input type="number" id="cfg-cycles" value="4">
+      </label>
+    </fieldset>
+    <div class="actions">
+      <button id="cfg-cancel">Abbrechen</button>
+      <button id="cfg-save">Speichern</button>
     </div>
   </div>
   <script src="renderer-ui.js"></script>
